// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`undefined 1`] = `
<div
  className="navbar custom"
  style={Object {}}
>
  Workbench
</div>
`;

exports[`undefined 2`] = `
<div
  className="navbar"
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  Workbench
</div>
`;

exports[`undefined 3`] = `
<div
  className="navbar"
  style={Object {}}
>
  Workbench
</div>
`;
